--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,7 +39,7 @@ body {
     margin: 0;
     place-items: center;
     min-width: 320px;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 h1 {
@@ -117,6 +117,16 @@ tbody tr:nth-child(odd) {
 .nav-link {
     color: #fff;
     text-decoration: none;
+}
+
+.search-container {
+    width: 100%;
+    margin: 40px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .active {
@@ -243,10 +253,7 @@ tbody tr:nth-child(odd) {
 
 .recipe-results {
     display: grid;
-    grid-template-columns: repeat(
-        auto-fit,
-        minmax(250px, 1fr)
-    ); /* Responsive columns */
+    grid-template-columns: 250px 250px 250px;
     gap: 1.5rem; /* Space between cards */
     padding: 1rem; /* Padding around the grid */
 }
