--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,34 +12,25 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-/* webkit solution */
-::-webkit-input-placeholder {
-    text-align: right;
-}
-
-/* mozilla solution */
+::-webkit-input-placeholder,
 input:-moz-placeholder {
-    text-align: right;
+    text-align: right; /* Combine placeholder styles */
 }
 
 a {
     font-weight: 500;
-    color: #000000;
+    color: #000;
     text-decoration: inherit;
 }
+
 a:hover {
     color: #535bf2;
 }
 
 body {
     background: #ecf0f1;
-    background-size: cover;
-    background-repeat: no-repeat no-repeat;
-    background-position: center center;
     margin: 0;
-    place-items: center;
     min-width: 320px;
-    /* min-height: 100vh; */
 }
 
 h1 {
@@ -53,14 +44,15 @@ button {
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
-    font-family: inherit;
     background-color: #1a1a1a;
     cursor: pointer;
     transition: border-color 0.25s;
 }
+
 button:hover {
     border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
@@ -71,7 +63,6 @@ main {
     width: 100%;
     min-height: 100vh;
     display: flex;
-    flex-direction: row;
 }
 
 tr {
@@ -81,10 +72,19 @@ tr {
 }
 
 tbody tr:nth-child(odd) {
-    background-color: #333333;
+    background-color: #333;
 }
 
 /* Navbar Content */
+.navbar-nav .nav-link {
+    transition: none; /* Disable transition effects */
+}
+
+.navbar-nav .nav-link:hover {
+    background-color: transparent; /* Remove background color on hover */
+    color: inherit; /* Keep the text color the same */
+}
+
 .nav {
     display: flex;
     padding: 1em 2em;
@@ -92,8 +92,7 @@ tbody tr:nth-child(odd) {
 
 .nav ul {
     display: flex;
-    margin-left: auto;
-    flex-direction: row;
+    margin-inline: auto;
 }
 
 .nav-title {
@@ -122,10 +121,8 @@ tbody tr:nth-child(odd) {
 .search-container {
     width: 100%;
     margin: 40px;
-    text-align: center;
     display: flex;
     align-items: center;
-    flex-direction: row;
     justify-content: center;
 }
 
@@ -133,6 +130,7 @@ tbody tr:nth-child(odd) {
     width: 60px;
     height: 60px;
 }
+
 .active {
     font-weight: 700;
 }
