--- a/client/src/index.css
+++ b/client/src/index.css
@@ -181,9 +181,12 @@ tbody tr:nth-child(odd) {
 }
 
 .container {
-    /* margin: auto; */
-    width: 100%;
-    /* height: 90%; */
+    margin-right:50%; 
+    margin-left:8%;
+    margin-top:6%;
+    width: 40%;
+    height:80%;
+
 }
 
 #create-ticket-link {
@@ -192,32 +195,41 @@ tbody tr:nth-child(odd) {
 }
 
 .form {
-    width: 60%;
-    height: 80%;
-    background-color: #b864c4;
-    margin: auto;
+    width: 40%;
+    height: 90%;
+    background-color: #ffffff;
+  
+    margin:0%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content:flex-start;
+    align-items:center;
 }
 
 .form > h1,
 .form > label {
-    color: yellow;
+    color: Black;
+    
 }
 
 .form > input {
     width: 200px;
+    margin-bottom:6%;
+    margin-top: 1%;
 }
 
 .form > label {
-    margin-top: 2.5%;
-    margin-bottom: 2.5%;
+    margin-top: 7%;
+    margin-bottom: 3%;
+    margin-left:16%;
+    align-self:flex-start;
+    
+    
 }
 
 .form button {
-    margin-top: 2.5%;
+    margin-top: 6%;
+    margin-bottom:35%
 }
 
 .form textarea {
